[project]
name = "diy-clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jax>=0.10.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "polars>=1.41.2",
    "scikit-learn>=1.9.0",
    "tqdm>=4.68.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
notebook = [
    "marimo>=0.23.9",
]
